--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -231,6 +231,16 @@ Breakpoints:
     .drink-title h4 {
         font-size: 3.6rem;
     }
+
+    /* ================================== */
+    /* FOOTER */
+    /* ================================== */
+    .footer {
+        padding: 1.2rem;
+    }
+    .footer-content span {
+        font-size: 1.4rem;
+    }
 }
 
 @media only screen and (max-width: 33.75em) {
